HEX-230 Fix alignment of TimeCounter

--- a/client/src/components/dedicated/TimeCounter/style.module.scss
+++ b/client/src/components/dedicated/TimeCounter/style.module.scss
@@ -1,4 +1,8 @@
 .root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   max-width: 34rem;
 }
